--- a/card.html
+++ b/card.html
@@ -1,8 +1,22 @@
 <html>
  <body>
   <div itemscope itemptype="http://schema.org/Person">
-   <span itemprop="name">Grzegorz Walczak</span>
-   <span itemprop="jobTitle">Student</span>
+   <span itemprop="name">Grzegorz Walczak</span><br>
+   <span itemprop="jobTitle">Student</span><br>
+   <span itemprop="passion">Interesuję się:</span><br><br>
+   <ul>
+   <div id="hobbies">
+   	<li>
+   		Interesuję się doktryną Kościoła Katolickiego
+   	</li>
+   	<li>
+   		Lubię ciężkie brzmienie
+   	</li>
+   	<li>
+   		Moją pasją jest muzyka
+   	</li>
+   	</ul>
+   	</div>
    <a href="http://v-ie.uek.krakow.pl/~s188580" itemprop="url">http://v-ie.uek.krakow.pl/~s188580</a>
   </div>
  </body>
