--- a/card.html
+++ b/card.html
@@ -17,6 +17,10 @@
    	</li>
    	</ul>
    	</div>
+   	<div id="socialMedia">
+   	<ul>
+   	</ul>
+   	</div>
    <a href="http://v-ie.uek.krakow.pl/~s188580" itemprop="url">http://v-ie.uek.krakow.pl/~s188580</a>
   </div>
  </body>
