--- a/card.html
+++ b/card.html
@@ -19,6 +19,7 @@
    	</div>
    	<div id="socialMedia">
    	<ul>
+   		<li><a href="https://www.facebook.com/">Facebook</a></li>
    	</ul>
    	</div>
    <a href="http://v-ie.uek.krakow.pl/~s188580" itemprop="url">http://v-ie.uek.krakow.pl/~s188580</a>
