--- a/card.html
+++ b/card.html
@@ -20,6 +20,7 @@
    	<div id="socialMedia">
    	<ul>
    		<li><a href="https://www.facebook.com/">Facebook</a></li>
+   		<li><a href="https://www.twitter.com/">Twitter</a></li>
    	</ul>
    	</div>
    <a href="http://v-ie.uek.krakow.pl/~s188580" itemprop="url">http://v-ie.uek.krakow.pl/~s188580</a>
