--- a/card.html
+++ b/card.html
@@ -21,6 +21,7 @@
    	<ul>
    		<li><a href="https://www.facebook.com/">Facebook</a></li>
    		<li><a href="https://www.twitter.com/">Twitter</a></li>
+   		<li><a href="https://plus.google.com/">Google Plus+</a></li>
    	</ul>
    	</div>
    <a href="http://v-ie.uek.krakow.pl/~s188580" itemprop="url">http://v-ie.uek.krakow.pl/~s188580</a>
