--- a/card.html
+++ b/card.html
@@ -19,8 +19,21 @@
    	</div>
    	<div id="socialMedia">
    	<ul>
-   	</ul>
-   	</div>
+      </ul>   	
+      </div>
+      <div id="education">
+         <ul>
+            <li>
+            <a href="http://www.sp6.mielec.pl/">Szkoła Podstawowa nr.6 w Mielcu</a>
+            </li>
+            <li>
+            <a href="http://www.gim2.mielec.pl/">Gimnazjum nr. 2 w Mielcu</a>
+            </li>
+            <li>
+            <a href="http://www.zstmielec.pl/">III LO przy ZST w Mielcu</a>
+            </li>                                  
+         </ull
+      </div>
    <a href="http://v-ie.uek.krakow.pl/~s188580" itemprop="url">http://v-ie.uek.krakow.pl/~s188580</a>
   </div>
  </body>
